--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open portfolioApp.html",
-            "file": "c:\\Users\\zzava\\OneDrive\\Desktop\\zuriel.dev\\src\\frontEnd\\portfolioApp.html"
+            "file": "c:\\Users\\zzava\\Desktop\\zuriel.dev\\src\\frontEnd\\portfolioApp.html"
         }
     ]
 }
